@@ -126,9 +126,8 @@ void Looper::process(unsigned int nframes, Buffers* buffers)
 
 			clips[clip]->record( nframes, inputL, inputR);
 		} else if ( clips[clip]->playing() ) {
-			// copy data into tmpBuffer, then pitch-stretch into track buffer
 			long targetFrames = fpb;
-			long actualFrames = clips[clip]->getRecFpb();//getBufferLenght();
+			long actualFrames = clips[clip]->getRecFpb();
 #ifdef DEBUG_TIME
 				cout << "FPB: " << fpb << "\n";
 				cout << "Target: " << targetFrames << " - Actual: " << actualFrames << "\n";
