@@ -104,9 +104,6 @@ void Metronome::beat()
 void Metronome::setFpb(double f)
 {
 	fpb = f;
-
-	// disable play until next beat
-	//playPoint = endPoint + 1;
 }
 
 void Metronome::process(int nframes, Buffers* buffers)
